[project]
name = "TelegramBot"
dynamic = ["dependencies", "version"]

[project.scripts]
init = "telegram_agent.src.telegram.base:init"
bot = "telegram_agent.src.telegram.base:run_bot"
userbot = "telegram_agent.src.telegram.base:run_userbot"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }



