[project]
name = "TelegramBot"
dynamic = ["version", "dependencies"]
#dependencies = [
#  "pyrogram @ git+https://github.com/KurimuzonAkuma/pyrogram.git@c5445324f712f2bf9942954e3a88b46bfb086efd",
#]


  




[project.scripts]
init = "telegram_agent.src.telegram.base:init"
bot = "telegram_agent.src.telegram.base:run_bot"
userbot = "telegram_agent.src.telegram.base:run_userbot"
main = "telegram_agent.src.telegram.base:main"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }



